Hides bullets in list

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <title>Tyler Rosen Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Free HTML5 Website Template by gettemplates.co" />
-    <meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive"
-    />
+    <meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
     <meta name="author" content="gettemplates.co" />
 
     <!-- Facebook and Twitter integration -->
@@ -144,13 +143,23 @@
                         <h2>About</h2>
                         <img src="images/portrait.jpg" class="portrait" alt="Edit photo">
 
-                        <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit
-                            ab aliquam dolor eius.</p>
+                        <p>Hello. I am a full stack web developer who is contanstly working to keep up with the latest technologies.</p>
+                        <br>
+                        <h2 font-weight="bold">Questions for me</h2>
+                        <ul>
+                            <li>Q: What languages have you worked in?</li>
+                            <li>A: blah blah blah</li>
+                            <br>
+                            <li>Q: How would you rank the Marvel Cinematic Universe films?</li>
+                            <li>A:
+                                <br><br>
+                                <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/GYBs8AT-jps?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
-
         <div class="gtco-section-overflow">
 
             <div class="gtco-section" id="gtco-skills" data-section="skills">
@@ -258,47 +267,46 @@
                         </div>
                     </div>
 
-                     <div class="col-md-4">
-                            <h3 class="projects">Friend Finder</h3>
-                            <!--<a href="images/img_4.jpg" title="Project name here.">-->
-                            <p>Web app that allows users that takes survey data and matches those with similar results - built with HTML, CSS, Bootstrap, JavaScript, jQuery,
-                                Node
-                            </p>
-                                <figure>
-                                    <!--<div class="overlay"><i class="ti-plus"></i></div>-->
-                                    <a href="https://github.com/TylerRosen/friend-finder" target="_blank"><button class="github">Github</button></a>
+                    <div class="col-md-4">
+                        <h3 class="projects">Friend Finder</h3>
+                        <!--<a href="images/img_4.jpg" title="Project name here.">-->
+                        <p>Web app that allows users that takes survey data and matches those with similar results - built with HTML, CSS, Bootstrap, JavaScript, jQuery, Node
+                        </p>
+                        <figure>
+                            <!--<div class="overlay"><i class="ti-plus"></i></div>-->
+                            <a href="https://github.com/TylerRosen/friend-finder" target="_blank"><button class="github">Github</button></a>
                             <a href="https://friend-finder-site.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>
 
                             <!--<img src="images/img_4.jpg" alt="Image" class="img-responsive">-->
-                            </figure>
-                            <!--</a>-->
-                        </div>
-                        <div class="col-md-4">
-                            <h3 class="projects">Giph-tastic!</h3>
-                            <!--<a href="images/img_5.jpg" title="Project name here.">-->
-                            <p>Web app that displays gifs based after entering search term, clicking gif pauses/unpauses - built with HTML, CSS, Javascript, jQuery, AJAX</p>
-                                <figure>
-                                    <!--<div class="overlay"><i class="ti-plus"></i></div>-->
-                                    <a href="https://github.com/TylerRosen/giphyAPI" target="_blank"><button class="github">Github</button></a>
+                        </figure>
+                        <!--</a>-->
+                    </div>
+                    <div class="col-md-4">
+                        <h3 class="projects">Giph-tastic!</h3>
+                        <!--<a href="images/img_5.jpg" title="Project name here.">-->
+                        <p>Web app that displays gifs based after entering search term, clicking gif pauses/unpauses - built with HTML, CSS, Javascript, jQuery, AJAX</p>
+                        <figure>
+                            <!--<div class="overlay"><i class="ti-plus"></i></div>-->
+                            <a href="https://github.com/TylerRosen/giphyAPI" target="_blank"><button class="github">Github</button></a>
                             <a href="https://giphtastic.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>
 
                             <!--<img src="images/img_5.jpg" alt="Image" class="img-responsive">-->
-                            </figure>
-                            <!--</a>-->
-                        </div>
-                        <div class="col-md-4">
-                            <h3 class="projects">Movie Trivia</h3>
-                            <!--<a href="images/img_6.jpg" title="Project name here."> -->
-                            <p>A trivia game about well known films, users must answer within the time limit - built with HTML, CSS, Bootstrap, JavaScript, jQuery.</p>
-                                <figure>
-                                    <!--<div class="overlay"><i class="ti-plus"></i></div>-->
-                                    <a href="https://movie-trivia.herokuapp.com/" target="_blank"><button class="github">Github</button></a>
+                        </figure>
+                        <!--</a>-->
+                    </div>
+                    <div class="col-md-4">
+                        <h3 class="projects">Movie Trivia</h3>
+                        <!--<a href="images/img_6.jpg" title="Project name here."> -->
+                        <p>A trivia game about well known films, users must answer within the time limit - built with HTML, CSS, Bootstrap, JavaScript, jQuery.</p>
+                        <figure>
+                            <!--<div class="overlay"><i class="ti-plus"></i></div>-->
+                            <a href="https://movie-trivia.herokuapp.com/" target="_blank"><button class="github">Github</button></a>
                             <a href="https://movie-trivia.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>
 
                             <!--<img src="images/img_6.jpg" alt="Image" class="img-responsive">-->
-                            </figure>
-                            <!--</a>-->
-                        </div>
+                        </figure>
+                        <!--</a>-->
+                    </div>
 
                     <!--<div class="row">
                         <div class="col-md-4">
@@ -306,115 +314,115 @@
                             <a href="images/img_2.jpg" title="Song Roulette"></a>
                             <p>A spotify based application that allows users to like/dislike songs - using HTML, CSS, Bootstrap, Highcharts, Javascript, JQuery, Firebase, AJAX, API's</p>
                             <!--class="gtco-card-item image-popup"-->
-                            <!--<figure>
+                    <!--<figure>
                                 <a href="https://github.com/TylerRosen/Song-Roulette" target="_blank"><button class="github">Github</button></a>
                                 <a href="https://songroulette.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>-->
 
-                                <!--<img src="images/img_2.jpg" alt="Image" class="img-responsive">-->
-                            <!--</figure>
+                    <!--<img src="images/img_2.jpg" alt="Image" class="img-responsive">-->
+                    <!--</figure>
                         </div>
                         <div class="col-md-4">
                             <h3 class="projects">Hang-Movie</h3>-->
-                            <!--<a href="images/img_1.jpg" title="Hang-Movie">-->
-                                <!--<p>A hangman game that uses famous movie quotes - built with HTML, CSS, Javascript, jQuery, Handlebars, Express, MySQL.</p>
+                    <!--<a href="images/img_1.jpg" title="Hang-Movie">-->
+                    <!--<p>A hangman game that uses famous movie quotes - built with HTML, CSS, Javascript, jQuery, Handlebars, Express, MySQL.</p>
                                 <figure>-->
-                                    <!--<div class="overlay"><i class="ti-plus"></i></div>-->
-                                    <!--<a href="https://github.com/TylerRosen/Hang-Movie" target="_blank"><button class="github">Github</button></a>
+                    <!--<div class="overlay"><i class="ti-plus"></i></div>-->
+                    <!--<a href="https://github.com/TylerRosen/Hang-Movie" target="_blank"><button class="github">Github</button></a>
                                     <a href="https://hang-movie.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>-->
 
-                                    <!--<img src="images/img_1.jpg" alt="Image" class="img-responsive">-->
-                                <!--</figure>-->
-                            <!--</a>-->
-                        <!--</div>
+                    <!--<img src="images/img_1.jpg" alt="Image" class="img-responsive">-->
+                    <!--</figure>-->
+                    <!--</a>-->
+                    <!--</div>
                         <div class="col-md-4">
                             <h3 class="projects">Onion Scraper</h3>-->
-                            <!--<a href="images/img_3.jpg" title="Project name here.">-->
-                            <!--<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+                    <!--<a href="images/img_3.jpg" title="Project name here.">-->
+                    <!--<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
                                 <figure>-->
-                                    <!--<div class="overlay"><i class="ti-plus"></i></div>-->
-                                    <!--<a href="https://github.com/TylerRosen/news-scrapper" target="_blank"><button class="github">Github</button></a>
+                    <!--<div class="overlay"><i class="ti-plus"></i></div>-->
+                    <!--<a href="https://github.com/TylerRosen/news-scrapper" target="_blank"><button class="github">Github</button></a>
                             <a href="https://news-scrapping-site.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>-->
 
-                            <!--<img src="images/img_3.jpg" alt="Image" class="img-responsive">-->
-                            <!--</figure>-->
-                            <!--</a>-->
-                        <!--</div>-->
+                    <!--<img src="images/img_3.jpg" alt="Image" class="img-responsive">-->
+                    <!--</figure>-->
+                    <!--</a>-->
+                    <!--</div>-->
 
-                    </div>
                 </div>
             </div>
+        </div>
 
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-            <div id="gtco-contact" data-section="contact" class="gtco-cover gtco-cover-xs" style="background-image:url(images/img_bg_2.jpg);">
-                <div class="overlay"></div>
-                <div class="gtco-container">
-                    <div class="row text-center">
-                        <div class="display-t">
-                            <div class="display-tc">
-                                <div class="col-md-12">
-                                    <h3>If you have inqueries please email me at <a href="#">tylermrosen@gmail.com</a></h3>
-                                    <p class="pull-right">
-                                        <ul class="gtco-social-icons pull-right">
-                                            <li><a href="https://github.com/TylerRosen" target="_blank"><i class="icon-github"></i></a></li>
-                                            <li><a href="https://www.linkedin.com/in/tyler-rosen-37733268/" target="_blank"><i class="icon-linkedin"></i></a></li>
-                                            <li><a href="#"><i class="icon-facebook" target="_blank"></i></a></li>
-                                        </ul>
-                                    </p>
-                                </div>
+        <div id="gtco-contact" data-section="contact" class="gtco-cover gtco-cover-xs" style="background-image:url(images/img_bg_2.jpg);">
+            <div class="overlay"></div>
+            <div class="gtco-container">
+                <div class="row text-center">
+                    <div class="display-t">
+                        <div class="display-tc">
+                            <div class="col-md-12">
+                                <h3>If you have inqueries please email me at <a href="#">tylermrosen@gmail.com</a></h3>
+                                <p class="pull-right">
+                                    <ul class="gtco-social-icons pull-right">
+                                        <li><a href="https://github.com/TylerRosen" target="_blank"><i class="icon-github"></i></a></li>
+                                        <li><a href="https://www.linkedin.com/in/tyler-rosen-37733268/" target="_blank"><i class="icon-linkedin"></i></a></li>
+                                        <li><a href="#"><i class="icon-facebook" target="_blank"></i></a></li>
+                                    </ul>
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
 
-            <footer id="gtco-footer" role="contentinfo">
-                <div class="gtco-container">
+        <footer id="gtco-footer" role="contentinfo">
+            <div class="gtco-container">
 
-                    <div class="row copyright">
-                        <div class="col-md-12">
-                            <p class="pull-left">
-                                <small class="block">&copy; Tyler Rosen 2017</small>
-                                <small class="block">Designed by <a href="http://gettemplates.co/" target="_blank">GetTemplates.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
-                            </p>
-                            <!--<p class="pull-right">
+                <div class="row copyright">
+                    <div class="col-md-12">
+                        <p class="pull-left">
+                            <small class="block">&copy; Tyler Rosen 2017</small>
+                            <small class="block">Designed by <a href="http://gettemplates.co/" target="_blank">GetTemplates.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+                        </p>
+                        <!--<p class="pull-right">
                                 <ul class="gtco-social-icons pull-right">
                                     <li><a href="https://github.com/TylerRosen"><i class="icon-github"></i></a></li>
                                     <li><a href="https://www.linkedin.com/in/tyler-rosen-37733268/"><i class="icon-linkedin"></i></a></li>
                                     <li><a href="#"><i class="icon-facebook"></i></a></li>
                                 </ul>
                             </p>-->
-                        </div>
                     </div>
-
                 </div>
-            </footer>
-        </div>
 
-        <div class="gototop js-top">
-            <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
-        </div>
+            </div>
+        </footer>
+    </div>
 
-        <!-- jQuery -->
-        <script src="js/jquery.min.js"></script>
-        <!-- jQuery Easing -->
-        <script src="js/jquery.easing.1.3.js"></script>
-        <!-- Bootstrap -->
-        <script src="js/bootstrap.min.js"></script>
-        <!-- Waypoints -->
-        <script src="js/jquery.waypoints.min.js"></script>
-        <!-- Carousel -->
-        <script src="js/owl.carousel.min.js"></script>
-        <!-- countTo -->
-        <script src="js/jquery.countTo.js"></script>
-        <!-- Flexslider -->
-        <script src="js/jquery.flexslider-min.js"></script>
-        <!-- Magnific Popup -->
-        <script src="js/jquery.magnific-popup.min.js"></script>
-        <script src="js/magnific-popup-options.js"></script>
-        <!-- Main -->
-        <script src="js/main.js"></script>
+    <div class="gototop js-top">
+        <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
+    </div>
+
+    <!-- jQuery -->
+    <script src="js/jquery.min.js"></script>
+    <!-- jQuery Easing -->
+    <script src="js/jquery.easing.1.3.js"></script>
+    <!-- Bootstrap -->
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Waypoints -->
+    <script src="js/jquery.waypoints.min.js"></script>
+    <!-- Carousel -->
+    <script src="js/owl.carousel.min.js"></script>
+    <!-- countTo -->
+    <script src="js/jquery.countTo.js"></script>
+    <!-- Flexslider -->
+    <script src="js/jquery.flexslider-min.js"></script>
+    <!-- Magnific Popup -->
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/magnific-popup-options.js"></script>
+    <!-- Main -->
+    <script src="js/main.js"></script>
 
     </div>
 </body>
