Added Project 3 to homepage

--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                         <img src="images/portrait.jpg" class="portrait" alt="Edit photo">
 
                         <p>Hello. I am a full stack web developer who is contanstly working to keep up with the latest technologies.</p>
-                        <br>
-                        <h2 font-weight="bold">Questions for me</h2>
-                        <ul>
+                        <br><br><br><br><br><br>
+                        <!--<h2 font-weight="bold">Questions for me</h2>-->
+                        <!--<ul>
                             <li>Q: What languages have you worked in?</li>
                             <li>A: blah blah blah</li>
                             <br>
@@ -155,7 +155,7 @@
                                 <br><br>
                                 <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/GYBs8AT-jps?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
                             </li>
-                        </ul>
+                        </ul>-->
                     </div>
                 </div>
             </div>
