--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
                             </div>
                         </div>
                     </li>
-                    <li style="background-image: url(images/img_bg_3.jpg)">
+                    <li style="background-image: url(images/fan-tasize.PNG">
                         <div class="overlay"></div>
                         <div class="container">
                             <div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
                                 <div class="slider-text-inner">
                                     <h2>Fan-tasize</h2>
-                                    <!--<p><a href=insert link to project target="_blank" class="btn btn-primary btn-lg">View</a></p>-->
+                                    <p><a href="https://fan-tasize.herokuapp.com/" target="_blank" class="btn btn-primary btn-lg">View</a></p>
                                 </div>
                             </div>
                         </div>
